# Ferriox

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: CODESIGN.md  PAPERS.md
examples/: simple.rs
src/: compression.rs  config.rs  core_attn.rs  error.rs  forward.rs  indexer.rs  lib.rs  routing.rs  scheduler.rs  sink.rs  tensor.rs  window.rs  workspace.rs
src/backward/: dual_pass.rs  kv_major.rs  mod.rs
src/device/: backward.rs  core_attn.rs  indexer.rs  mod.rs
tests/: test_forward.rs
